test/expected/bogus_path_escaped.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "data/*/*"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "data/*/"
  Literal "*"
]
shit: 2:6: error: No matches for the glob pattern 'data/*/*'.
     2 |  echo data/*/\*
       |       ^~~~~~~~~ here.
